--- a/AlfaBion/views/detalji.ejs
+++ b/AlfaBion/views/detalji.ejs
@@ -14,16 +14,6 @@
 </head>
 
 <body>
-<!--  <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-nav border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Alfa Bion</h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="index.html">Početna</a>
-        <a class="p-2 text-dark" href="#">Usluge</a>
-        <a class="p-2 text-dark" href="proizvodi.html">Uređaji</a>
-        <a class="p-2 text-dark" href="#">Kontakt</a>
-    </nav>
-    <a class="btn btn-outline-primary" href="#">Ulogujte se</a>
-</div> -->
 
 
 
@@ -32,7 +22,9 @@
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Uređaji</h1>
+    <h1 class="display-4"><%= data.forEach()function(product){ %>
+
+       <% } %></h1>
     <p class="lead">Detaljnije o našem asortimanu</p>
 </div>
 
