--- a/AlfaBion/views/index.ejs
+++ b/AlfaBion/views/index.ejs
@@ -27,30 +27,7 @@
 
 
 
-<!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light clr">
-    <a class="navbar-brand" href="#">Alfa Bion</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Početna<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Usluge</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="proizvodi">Uređaji</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Kontakt</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<!--Navbar-->
+<% include header.ejs %>
 
 
 
@@ -65,13 +42,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="/images/random.jpg" alt="First slide">
+                <img class="d-block w-100" src="/images/lsd.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/images/random.jpg" alt="Second slide">
+                <img class="d-block w-100" src="/images/changa.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="/images/random.jpg" alt="Third slide">
+                <img class="d-block w-100" src="/images/mdma.jpg" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -87,31 +64,7 @@
 <!--Carousel-->
 
 
-<p><a href="test.html">asdf</a></p>
-
-<!--footer-->
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-    <div class="footer1">
-        <p>PRATITE NAS NA DRUŠTVENIM MREŽAMA</p>
-        <p id="under">Saznajte novosti iz sveta zdravlja i učestvujte u našim akcijama</p>
-    </div>
-    <div class="social">
-        <a href="https://www.facebook.com/" target="_blank" title="Facebook">
-            <i class="fab fa-facebook"></i>
-        </a>
-        <a class="google" href="" target="_blank" title="Google Plus">
-            <i class="fab fa-google-plus-square"></i>
-        </a>
-        <a class="youtube" href="" target="_blank" title="You Tube">
-            <i class="fab fa-youtube-square"></i>
-        </a>
-        <a class="linkedin" href="" target="_blank" title="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-        </a>
-    </div>
-</footer>
-<!--Footer-->
-
+<% include footer.ejs %>
 
 <!--Scripts and bootstrap-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
