--- a/AlfaBion/views/proizvodi.ejs
+++ b/AlfaBion/views/proizvodi.ejs
@@ -52,12 +52,11 @@
         <div class="card-body">
             <h4 class="card-title"><%= product.title %></h4>
             <p class="card-text">Cena: <%= product.price %> RSD</p>
-
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                Detaljnije
-            </button>
-            <!-- Button trigger modal -->
+            <a href="detalji/<%= product.id %>">
+                <button type="button" class="btn btn-primary">
+                    Detaljnije
+                </button>
+            </a>
 
             <!-- Modal Ovo treba da se doda u svaku instancu card klase -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
