--- a/AlfaBion/views/detalji.ejs
+++ b/AlfaBion/views/detalji.ejs
@@ -20,47 +20,44 @@
 <% include header.ejs %>
 
 
-
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4"><%= id %></h1>
-    <p class="lead">Detaljnije o našem asortimanu</p>
-</div>
-
-
 <div class="container">
-
-
-
     <% if (data) { %>
     <% data.forEach(function(product){
-        if(product.id == id){
+    if(product.id == id){
 
     %>
 
+    <div class="row">
 
-    </tr>
-
-    <div class="container" >
-        <img class="card-img-top fill" src="/images/<%= product.img %>">
-        <div class="card-body">
-            <h4 class="card-title"><%= product.title %></h4>
-            <p class="card-text">Cena: <%= product.price %> RSD</p>
-            <p class="card-text">Cena: <%= product.description %> RSD</p>
+        <div class="col-lg-3">
+            <h1 class="my-4"><%= "Psihodelici" %></h1>
         </div>
-        <a href="#">
-            <button type="button" class="btn btn-primary">
-                Kupi
-            </button>
-        </a>
+        <div class="col-lg-9">
+
+            <div class="card mt-4">
+                <img class="card-img-top img-fluid" style="width: 768px; height: 432px" src="/images/<%= product.img %>" alt="">
+                <div class="card-body">
+                    <h3 class="card-title"><%= product.title %></h3>
+                        <h4></h4>
+
+                    <p class="card-text"><%= product.description %></p>
+                    <p><%= product.price %> RSD  <a href="#" class="btn btn-success">Kupi</a></p>
+                    <span class="text-warning">&#9733; &#9733; &#9733; &#9733; &#9733;</span>
+                    5.0 stars
+
+
+                </div>
+            </div>
+        </div>   <!-- /.card -->
     </div>
     <% }}) %>
     <% } %>
-
-
-
-
 </div>
-<!--End of container -->
+
+
+
+
+
 
 <% include footer.ejs %>
 
