--- a/AlfaBion/views/header.ejs
+++ b/AlfaBion/views/header.ejs
@@ -1,6 +1,6 @@
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light clr">
-    <a class="navbar-brand" href="#">Alfa Bion</a>
+    <a class="navbar-brand" href="/">Alfa Bion</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="#">Usluge</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="proizvodi">Uređaji</a>
+                <a class="nav-link" href="/proizvodi">Uređaji</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Kontakt</a>
