odradjen deo backenda

--- a/AlfaBion/views/detalji.ejs
+++ b/AlfaBion/views/detalji.ejs
@@ -25,12 +25,13 @@
     <% data.forEach(function(product){
     if(product.id == id){
 
+
     %>
 
     <div class="row">
 
         <div class="col-lg-3">
-            <h1 class="my-4"><%= "Psihodelici" %></h1>
+            <h1 class="my-4"><%= product.category %></h1>
         </div>
         <div class="col-lg-9">
 
