--- a/AlfaBion/views/header.ejs
+++ b/AlfaBion/views/header.ejs
@@ -18,6 +18,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Kontakt</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Логин</a>
+            </li>
         </ul>
     </div>
 </nav>
